<resources>
    <string name="app_name">JuegoCarreraNaipes</string>

    <!-- Textos de la pantalla de inicio -->
    <string name="game_title">Carrera de Naipes</string>
    <string name="game_subtitle">Juega con tus amigos</string>
    <string name="start_game_button">Iniciar Juego</string>
    <string name="app_icon_description">Icono del juego Carrera de Naipes</string>
    <string name="decorative_card">Carta decorativa</string>

    <string name="msg_movimiento">Movimiento: </string>
    <string name="msg_avance">, Avanzó: </string>

    <string name="msg_ganador">EL GANADOR SON LAS CARTAS: </string>

    <string name="msg_btn_siguiente">Siguiente</string>
    <string name="msg_btn_juego_nuevo">Juego nuevo</string>
    <string name="msg_btn_instrucciones">Como se juega</string>
    
    <!-- Textos de accesibilidad -->
    <string name="content_desc_cartas_pozo">Mazo de cartas</string>
    <string name="text_movimientos_inicial">Movimientos: 0</string>

    <string name="instrucciones">
        EL JUEGO CONSISTE EN SACAR CARTAS E IRA AVANZANDO EL TIPO DE LA CARTA QUE SALE,
        EL PRIMERO QUE LLEGUE AL FINAL DE LA PISTA GANARA LA PARTIDA. \n\n

        PUEDES JUGARLO CON TUS AMIGOS Y/O FAMILIA, SELECCIONANDO UN TIPO Y VER QUIEN GANA. \n\n

        SUERTE Y QUE SE DIVIERTAN :)
    </string>

    <!-- Descripciones de accesibilidad -->
    <string name="btn_siguiente_description">Agregar siguiente carta al juego</string>
    <string name="btn_nuevo_juego_description">Iniciar un nuevo juego</string>
    <string name="btn_juego_nuevo_description">Iniciar un nuevo juego</string>
    <string name="btn_info_description">Mostrar información e instrucciones del juego</string>
    <string name="treboles_description">Cartas del palo de tréboles</string>
    <string name="corazones_description">Cartas del palo de corazones</string>
    <string name="picas_description">Cartas del palo de picas</string>
    <string name="diamantes_description">Cartas del palo de diamantes</string>
    <string name="pista_description">Pista de cartas del juego</string>
    <string name="contador_movimientos_description">Contador de movimientos realizados</string>
    
    <!-- Strings para estados de la aplicación -->
    <string name="procesando_carta">Procesando...</string>
    <string name="movimientos_formato">Movimientos: %1$d</string>
    
    <!-- Strings para botones optimizados -->
    <string name="siguiente">Siguiente</string>
    <string name="juego_nuevo">Nuevo</string>
    <string name="info">Info</string>
</resources>